# kaizen-alpha-greatest-winners

./: .gitignore  KA_AUDITOR_PROMPTS_V10.md  KA_AUDITOR_PROMPTS_V11.md  KA_AUDITOR_PROMPTS_V5.md  KA_AUDITOR_PROMPTS_V6.md  KA_AUDITOR_PROMPTS_V7.md  KA_AUDITOR_PROMPTS_V8.md  KA_AUDITOR_PROMPTS_V9.md  KA_GREATEST_WINNERS_MASTER.md  KA_PROJECT_LOG.md  README.md  conftest.py  pyproject.toml  requirements.txt
gws/: __init__.py
phases/: GATE05_PILOT_PRECOMMIT.md  LOCKBOX_PRECOMMIT.md  PHASE0_GICS_VINTAGE_PRECOMMIT.md  PHASE0_PRECOMMIT.md  PHASE_A1_CLASSIFICATION_BACKLOG.md  PHASE_A1_PRECOMMIT.md  PHASE_A2_PRECOMMIT.md  PHASE_A3_TRANSFER_PRECOMMIT.md
research/: entry_point_discovery.md  hypothesis_commitments.md  market_context_inputs.md  regime_conditional_discovery.md  trend_following_foundations.md
scripts/: ci.py  compare_move_detectors.py  run_e2e_synthetic.py  run_null_calibration.py
tests/: test_a3_methods.py  test_audit_moves.py  test_base_context.py  test_cluster_robust.py  test_clustering.py  test_code_quality.py  test_collinearity.py  test_completeness_audit.py  test_compute_scaling.py  test_deflated_sharpe.py  test_detect_driver.py  test_e2e_integration.py  test_entry_point.py  test_feature_matrix_parallel.py  test_feature_provenance.py  test_features.py  test_features_vectorized.py  test_findings_backtest.py  test_frozen_families.py  test_index_membership.py  test_indicators.py  test_integration.py  test_integrity.py  test_lockbox.py  test_matched_controls.py  test_ml.py  test_monte_carlo.py  test_move_characterization.py  test_move_detector_mfe.py  (+22 more)
(+66 files in other folders)
