[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gws"
version = "0.0.1"
description = "Kaizen Alpha Greatest Winners Study"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["gws*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
